--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.3.1",
     "@mui/styled-engine-sc": "^6.3.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
@@ -51,6 +53,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "stripe": "^17.5.0",
     "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
   }
